--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
 .header{
     padding-left: 200px;
     display: flex;
