--- a/style.css
+++ b/style.css
@@ -2,18 +2,18 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 .header{
-    padding-left: 200px;
     display: flex;
     justify-content: space-between;
 }
 
 .topLink{
     cursor: cursor;
-    color: #9d9d9d;
+    color: #9ba3b4;
     text-decoration: none;
     font-weight: 500;
     padding-left: 20px;
     font-size: 16px;
+    padding-top: 2px;
 }
 
 .version{
@@ -26,14 +26,24 @@
 .top{
     display: flex;
     justify-content: space-between;
-    padding-right: 200px;
+    padding-right: 130px;
+    padding-left: 130px;
+    padding-top: 5px;
 }
 
-.vsc{
+.vcst{
     color: whitesmoke;
     font-weight: 700;
     font-size: 20px;
     letter-spacing: -0.2px;
+    text-decoration: none;
+    padding-left: 5px;
+    padding-bottom: 20px;
+
+}
+
+.vscl{
+    padding-top: 2px;
 }
 
 .base{
@@ -92,6 +102,7 @@
 .search{
     background-color: black;
     color: gray;
+    padding-top: 1px;
 
 }
 
@@ -99,10 +110,26 @@
     text-decoration: underline;
     color: #007ACC;
     /* font-size: 18px; */
-    font-size: 18px;
-    margin: 12px 0 6px 0;
+    font-size: 14px;
+    margin: 16px 0 8px 0;
+    font-weight: bold;
 
 }
 .download-description{
     padding-top: 20px;
+    line-height: 160%;
+    font-size: 14px;
+    color: #9ba3b4;
+}
+
+.above-base-description{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 8px 12px;
+    border-radius: 32px;
+    background-color: rgba(255, 255, 255, 0.04);
+    border: 1px solid rgba(255, 255, 255, 0.07);
+    color: #9ba3b4;
+    width: max-content;
+    margin-bottom: 8px;
 }
